# uTox

./: CMakeLists.txt
cmake/: toolchain-win32.cmake  toolchain-win64.cmake  win.cmake
src/: flist.c  friend.h  groups.h  tox_callbacks.c
src/android/: main.c
src/av/: CMakeLists.txt  audio.c  video.c
src/cocoa/: CMakeLists.txt  drawing.m  interaction.m  main.m
src/layout/: CMakeLists.txt
src/layout/layout/: background.c  friend.c  group.c  notify.c  settings.c  sidebar.c  tray.c  userbadge.c
src/windows/: CMakeLists.txt  audio.c  events.c  main.c
src/xlib/: CMakeLists.txt  event.c  main.c  tray.c  window.c
